demo-for-kubernetes/deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
    - host: ecommerce.example.com
      http:
        paths:
          - path: /demo-for-kube
            backend:
              serviceName: demo-for-kube-service
              servicePort: 8080
